--- a/users/package.json
+++ b/users/package.json
@@ -7,7 +7,8 @@
     "dev:server": "nodemon src/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
