--- a/users/package.json
+++ b/users/package.json
@@ -7,6 +7,7 @@
     "dev:server": "nodemon src/server.ts"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
