--- a/timesheets/package.json
+++ b/timesheets/package.json
@@ -7,6 +7,7 @@
     "dev:server": "nodemon src/server.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.15",
@@ -14,6 +15,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
