--- a/users/tsconfig.json
+++ b/users/tsconfig.json
@@ -16,6 +16,10 @@
     "strict": false,                                      /* Enable all strict type-checking options. */
     /* Completeness */                   /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "typeRoots": [
+      "./src/@types",
+      "./node_modules/@types"
+    ]
   }
 }
